--- a/app/src/main/res/layout/activity_my_income.xml
+++ b/app/src/main/res/layout/activity_my_income.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:text="All"
                 android:textSize="10sp"
-                android:textColor="@color/orange"
+                android:textColor="@color/bluedark"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnRecurringIncome"
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/recurring"
                 android:textSize="10sp"
-                android:textColor="@color/orange"
+                android:textColor="@color/bluedark"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
                 app:layout_constraintStart_toEndOf="@+id/btnAllIncome"
                 app:layout_constraintEnd_toStartOf="@+id/btnOneTimeIncome"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/one_time"
                 android:textSize="10sp"
-                android:textColor="@color/orange"
+                android:textColor="@color/bluedark"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarIncome"
                 app:layout_constraintStart_toEndOf="@+id/btnRecurringIncome"
                 app:layout_constraintEnd_toEndOf="parent"
