--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="red">#FF0000</color>
     <color name="light_gray">#D3D3D3</color>
     <color name="orange">#Fb8500</color>
+    <color name="yellow">#Ffb703</color>
     <color name="bluedark">#023047</color>
     <color name="light_background">#FFFFFF</color>
     <color name="dark_background">#F0F0F0</color>
