--- a/app/src/main/res/layout/activity_my_bills.xml
+++ b/app/src/main/res/layout/activity_my_bills.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/all"
                 android:textSize="10sp"
-                android:textColor="@color/orange"
+                android:textColor="@color/yellow"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnIncoming"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/incoming"
                 android:textSize="10sp"
-                android:textColor="@color/orange"
+                android:textColor="@color/yellow"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toEndOf="@+id/btnAllBills"
                 app:layout_constraintEnd_toStartOf="@+id/btnDue"
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/overdue"
                 android:textSize="10sp"
-                android:textColor="@color/orange"
+                android:textColor="@color/yellow"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toEndOf="@+id/btnIncoming"
                 app:layout_constraintEnd_toStartOf="@+id/btnRecurring"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/recurring"
                 android:textSize="10sp"
-                android:textColor="@color/orange"
+                android:textColor="@color/yellow"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarBills"
                 app:layout_constraintStart_toEndOf="@+id/btnDue"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:contentDescription="@string/create_new_bill"/>
+                android:contentDescription="@string/create_new_Open_Payment"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
