--- a/app/src/main/res/layout/items_income.xml
+++ b/app/src/main/res/layout/items_income.xml
@@ -1,119 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="8dp"
-    android:layout_margin="16dp"
+    app:cardElevation="6dp"
+    app:cardCornerRadius="6dp"
+    android:layout_margin="12dp"
     android:id="@+id/cardView">
 
-    <LinearLayout
-        android:layout_width="356dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="6dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
+        android:padding="12dp">
 
-        <!-- Title -->
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Title Label -->
+        <TextView
+            android:id="@+id/labelTitleItemsIncome"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:text="@string/TiTle"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Title Value -->
+        <TextView
+            android:id="@+id/textviewTitleItemsIncome"
+            android:layout_width="220dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="8dp"
+            android:text="Income Title"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/labelTitleItemsIncome"
+            app:layout_constraintStart_toStartOf="@+id/textviewCategoryItemsIncome"
+            app:layout_constraintWidth_default="wrap" />
+
+        <!-- Category Label -->
+        <TextView
+            android:id="@+id/labelCategoryItemsIncome"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:text="@string/CaTegory"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelTitleItemsIncome" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/TiTle"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+        <!-- Category Value -->
+        <TextView
+            android:id="@+id/textviewCategoryItemsIncome"
+            android:layout_width="150dp"
+            android:layout_height="18dp"
+            android:text="Category Name"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/labelCategoryItemsIncome"
+            app:layout_constraintStart_toStartOf="@+id/textviewAmountItemsIncome"
+            app:layout_constraintTop_toTopOf="@id/labelCategoryItemsIncome" />
 
-            <TextView
-                android:id="@+id/textviewTitleIncome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Income Title"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <!-- Category -->
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Amount Label -->
+        <TextView
+            android:id="@+id/labelAmountItemsIncome"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:text="@string/aMount"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelCategoryItemsIncome" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/CaTegory"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+        <!-- Amount Value -->
+        <TextView
+            android:id="@+id/textviewAmountItemsIncome"
+            android:layout_width="150dp"
+            android:layout_height="18dp"
+            android:text="$1200"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/labelAmountItemsIncome"
+            app:layout_constraintStart_toStartOf="@+id/textviewDateItemsIncome"
+            app:layout_constraintTop_toTopOf="@id/labelAmountItemsIncome" />
 
-            <TextView
-                android:id="@+id/textviewCategoryIncome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Category Name"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <!-- Amount -->
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Date Label -->
+        <TextView
+            android:id="@+id/labelDateItemsIncome"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:text="@string/income_date"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelAmountItemsIncome" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/aMount"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+        <!-- Date Value -->
+        <TextView
+            android:id="@+id/textviewDateItemsIncome"
+            android:layout_width="150dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="12dp"
+            android:text="1/6/2024"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/labelDateItemsIncome"
+            app:layout_constraintTop_toTopOf="@id/labelDateItemsIncome" />
 
-            <TextView
-                android:id="@+id/textviewAmountIncome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="$1200"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-        <!-- Date of Income -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date of Income"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewDateIncome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="1/6/2024"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-        </LinearLayout>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
