--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="dark_background">#F0F0F0</color>
     <color name="filter_active">#8ECAE6</color>
     <color name="filter_inactive">#FFFFFF</color>
+    <color name="header_background">#ECEFF1</color>
+    <color name="header_text">#37474F</color>
 </resources>
