--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -89,8 +89,19 @@
         <item>Extracurricular activities</item>
     </string-array>
 
+    <!-- Updated Groceries subcategories with essential and non-essential differentiation -->
     <string-array name="shopping_consumption_subcategories">
-        <item>Groceries</item>
+        <!-- Essential Groceries -->
+        <item>Groceries - Basic Food</item>
+        <item>Groceries - Household Necessities</item>
+
+        <!-- Non-Essential Groceries -->
+        <item>Groceries - Beverages</item>
+        <item>Groceries - Alcoholic Beverages</item>
+        <item>Groceries - Snacks and Sweets</item>
+        <item>Groceries - Luxury Foods</item>
+
+        <!-- Other Shopping & Consumption items -->
         <item>Clothing</item>
         <item>Electronics</item>
         <item>Household goods</item>
