--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:text="@string/paid"
             android:textStyle="bold"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/textviewCategoryItemsBills"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/textviewCategoryItemsBills"
