--- a/app/src/main/res/menu/top_nav.xml
+++ b/app/src/main/res/menu/top_nav.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/alarm"
         android:icon="@drawable/ic_alarm"
         app:showAsAction="always"
         android:title="@string/alarm"/>
