notifications & update required fields

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -405,8 +405,8 @@ x
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
-            app:itemIconTint="@color/black"
-            app:itemTextColor="#000000"
+            app:itemIconTint="@color/nav_item_color_selector"
+            app:itemTextColor="@color/nav_item_color_selector"
             app:menu="@menu/bottom_nav"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
